<resources>
    <string name="app_name">MyExpenses</string>
    <string name="title_payments">Расходы</string>
    <string name="title_templates">Шаблоны</string>
    <string name="title_categories">Категории</string>

    <!-- Login -->
    <string name="login_button_title">Войти</string>
    <string name="edittext_login_hint">Логин</string>
    <string name="edittext_password_hint">Пароль</string>
    <string name="login_error">Ошибка авторизации</string>
    <string name="error_empty">Поле не может быть пустым</string>

    <!-- Logout -->
    <string name="menu_item_logout">Выйти</string>

    <string name="empty_content_text">Здесь пусто.</string>

    <string name="button_text_save">Сохранить</string>
    <string name="button_text_redo">Повторить</string>
    <string name="button_text_delete">Удалить</string>
    <string name="button_text_cancel">Отмена</string>

    <!-- Payment -->
    <string name="hint_payment_category">Категория</string>
    <string name="hint_payment_date">Дата</string>
    <string name="hint_payment_description">Описание</string>
    <string name="hint_payment_seller">Продавец</string>
    <string name="hint_payment_cost">Стоимость</string>
    <string name="button_text_save_and_add_new">Сохранить и добавить следующий</string>
    <string name="error_no_categories">Не найдено ни одной категории</string>
    <string name="delete_payment_dialog_message">Вы действительно хотите удалить платеж?</string>

    <string name="long_tap_option_edit">Редактировать</string>
    <string name="long_tap_option_add_as_template">Добавить как шаблон</string>
    <string name="long_tap_option_redo">Повторить</string>
    <string name="long_tap_option_delete">Удалить</string>
    <string name="long_tap_option_add_payment_to_category">Добавить расходы</string>
    <string name="long_tap_option_find_payments_by_category">Найти расходы</string>

    <string name="menu_filter_payments">Фильтр</string>
    <string name="hint_filter_payments_date_start">Начало</string>
    <string name="hint_filter_payments_date_end">Окончание</string>
    <string name="button_filter_payments_find">Найти</string>

    <!-- Category -->
    <string name="hint_category_name">Название</string>
    <string name="hint_category_parent_category">Родительская категория</string>
    <string name="hint_category_parent_hidden">Скрытый</string>
    <string name="no_parent_category">\u003CНет\u003E</string>

    <!-- Template -->
    <string name="hint_template_category">Категория</string>
    <string name="hint_template_description">Описание</string>
    <string name="hint_template_seller">Продавец</string>
    <string name="hint_template_cost">Стоимость</string>
    <string name="delete_template_dialog_message">Вы действительно хотите удалить шаблон?</string>

</resources>
