<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_payments">

    <fragment
        android:id="@+id/navigation_payments"
        android:name="ru.neofusion.undead.myexpenses.ui.payments.PaymentsFragment"
        android:label="@string/title_payments"
        tools:layout="@layout/fragment_payments" />

    <fragment
        android:id="@+id/navigation_templates"
        android:name="ru.neofusion.undead.myexpenses.ui.templates.TemplatesFragment"
        android:label="@string/title_templates"
        tools:layout="@layout/fragment_templates" />

    <fragment
        android:id="@+id/navigation_categories"
        android:name="ru.neofusion.undead.myexpenses.ui.categories.CategoriesFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_categories" />
</navigation>