<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PaymentActivity">

    <include
        android:id="@+id/editLayout"
        layout="@layout/layout_edit_payment_controls"
        app:layout_constraintBottom_toTopOf="@id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveButton"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginEnd="@dimen/horizontal_margin_small"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:background="@color/colorPrimary"
        android:padding="@dimen/horizontal_margin_small"
        android:text="@string/button_text_save"
        app:layout_constraintEnd_toStartOf="@id/redoButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editLayout" />

    <Button
        android:id="@+id/redoButton"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin_small"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:background="@color/colorPrimary"
        android:padding="@dimen/horizontal_margin_small"
        android:text="@string/button_text_redo"
        app:layout_constraintEnd_toStartOf="@id/deleteButton"
        app:layout_constraintStart_toEndOf="@id/saveButton"
        app:layout_constraintTop_toBottomOf="@id/editLayout" />

    <Button
        android:id="@+id/deleteButton"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin_small"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:background="@android:color/holo_red_light"
        android:padding="@dimen/horizontal_margin_small"
        android:text="@string/button_text_delete"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/redoButton"
        app:layout_constraintTop_toBottomOf="@id/editLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>