<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".PaymentActivity">

    <Spinner
        android:id="@+id/spinnerCategory"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/horizontal_margin"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@id/datePicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@android:layout/simple_list_item_1" />

    <ImageButton
        android:id="@+id/dateLeft"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:src="@drawable/ic_arrow_left_white_24dp"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/etDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerCategory" />

    <EditText
        android:id="@+id/datePicker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin_small"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginEnd="@dimen/horizontal_margin_small"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:autofillHints="@string/hint_payment_date"
        android:clickable="true"
        android:editable="false"
        android:focusable="false"
        android:hint="@string/hint_payment_date"
        app:layout_constraintBottom_toTopOf="@id/etDescription"
        app:layout_constraintEnd_toStartOf="@id/dateRight"
        app:layout_constraintStart_toEndOf="@id/dateLeft"
        app:layout_constraintTop_toBottomOf="@id/spinnerCategory" />

    <ImageButton
        android:id="@+id/dateRight"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:src="@drawable/ic_arrow_right_white_24dp"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/etDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/datePicker"
        app:layout_constraintTop_toBottomOf="@id/spinnerCategory" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/horizontal_margin"
        android:hint="@string/hint_payment_description"
        app:layout_constraintBottom_toTopOf="@id/etSeller"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/datePicker" />

    <EditText
        android:id="@+id/etSeller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/horizontal_margin"
        android:hint="@string/hint_payment_seller"
        app:layout_constraintBottom_toTopOf="@id/etCost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDescription" />

    <EditText
        android:id="@+id/etCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/horizontal_margin"
        android:digits="0123456789.,"
        android:hint="@string/hint_payment_cost"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSeller" />

</androidx.constraintlayout.widget.ConstraintLayout>