<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/centerHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <EditText
            android:id="@+id/datePickerStart"
            style="@style/TextAppearance.AppCompat.Medium.Inverse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginEnd="@dimen/horizontal_margin_small"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:autofillHints="@string/hint_payment_date"
            android:clickable="true"
            android:editable="false"
            android:focusable="false"
            android:hint="@string/hint_filter_payments_date_start"
            android:lines="1"
            app:layout_constraintBottom_toTopOf="@id/spinnerCategory"
            app:layout_constraintEnd_toStartOf="@id/centerHorizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/datePickerEnd"
            style="@style/TextAppearance.AppCompat.Medium.Inverse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin_small"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:autofillHints="@string/hint_payment_date"
            android:clickable="true"
            android:editable="false"
            android:focusable="false"
            android:hint="@string/hint_filter_payments_date_end"
            android:lines="1"
            app:layout_constraintBottom_toTopOf="@id/spinnerCategory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/centerHorizontal"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerCategory"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/horizontal_margin"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/datePickerStart"
            tools:listitem="@layout/layout_simple_list_item_1_inverse" />

        <Button
            android:id="@+id/findButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginBottom="@dimen/vertical_margin_small"
            android:background="@android:drawable/btn_default"
            android:drawablePadding="0dp"
            android:text="@string/button_filter_payments_find"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/spinnerPeriod"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerCategory" />

        <Spinner
            android:id="@+id/spinnerPeriod"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginBottom="@dimen/vertical_margin_small"
            android:foreground="@drawable/ic_arrow_drop_down_black_24dp"
            android:background="@android:drawable/btn_default"
            android:drawablePadding="0dp"
            android:foregroundGravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/centerHorizontal"
            app:layout_constraintStart_toEndOf="@id/findButton"
            app:layout_constraintTop_toBottomOf="@id/spinnerCategory" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>